# MagGeo

./: .gitignore  .nojekyll  404.html  DOCUMENTATION_VALIDATION.md  DfTime_func.py  DistJ.py  GetSwarmData_and_ionosphereCorrect.py  Kradius.py  LICENSE  MANIFEST.in  MagGeo - Home.ipynb  MagGeo - Parallel Mode.ipynb  MagGeo - Sequential Mode-AMD-21.ipynb  MagGeo - Sequential Mode.ipynb  MagGeo - Sequential_Parallel.ipynb  MagGeoFunctions.py  MagGeoRequirements.yml  MagGeoSequential_SA.py  MagGeo_Guideline.ipynb  MagGeo_Parallel.ipynb  MagGeo_SA.py  MagGeo_Sequential.ipynb  MagGeo_main.py  PUBLICATION_GUIDE.md  ParallelMode.html  README.md  SequentialMode.html  Sequential_v2.ipynb  SwarmMagAnnotation.py  auxiliaryfunctions.py  background.html  calculation_mag_components.html  data_requirements.html  distance_to_GPS.py  environment.yml  environment_env.yml  how_does_it_works.html  improvements_summary.md  index.html  installation.html  (+15 more)
.github/workflows/: api_documentation.yml  deploy_combined_docs.yml  deploy_docs.yml  deploy_mkdocs.yml  deploy_mkdocs.yml.disabled  deploy_quarto.yml  deploy_quarto.yml.disabled  documentation.yml  page.yml  tests.yml
.ipynb_checkpoints/: MagGeo_Parallel-checkpoint.ipynb  MagGeo_Sequential-checkpoint.ipynb
DOCS_README/: index.html
Notebooks/: MagGeo - Home.ipynb  MagGeo - Parallel Mode.ipynb  MagGeo - Sequential Mode.ipynb  Notebook - Basics.ipynb  README.md
StandAloneScript/: MagGeoStandAloneScript.py
about/CONTRIBUTING/: index.html
about/changelog/: index.html
about/citation/: index.html
api/: index.html
api/core/: index.html
api/indices/: index.html
api/parallel_processing/: index.html
api/swarm_data_manager/: index.html
api_docs/: DOCS_README.md  index.md
api_docs/api/: core.md
api_docs/getting-started/: installation.md  quickstart.md
api_docs/stylesheets/: extra.css
data/: BirdGPSTrajectory.csv  BirdGPSTrajectoryTest.csv  MoveBank.csv  PEG_07_08_Mar_15.csv  PEG_09_10_Mar_15.csv  PEG_22_23_Jun_15.csv  UrskaDataTest2.csv  UskaTest.csv
data/sample_data/: BirdGPSTrajectory.csv
docs/: DOCUMENTATION_GUIDE.md  ParallelMode.ipynb  SequentialMode.ipynb  _quarto.yml  background.qmd  calculation_mag_components.qmd  data_requeriments.qmd  data_requirements.qmd  docs.qmd  how_does_it_works.qmd  index.md  index.qmd  installation.qmd  intro.qmd  maggeo_installation_guide.md  maggeo_refactor_plan.qmd  troubleshooting.qmd  using_maggeo.qmd
docs/_book/: ParallelMode.html  SequentialMode.html  background.html  calculation_mag_components.html  data_requirements.html  how_does_it_works.html  index.html  installation.html  intro.html  search.json  troubleshooting.html  using_maggeo.html
docs/_site/: docs.html  index.html  search.json
docs/about/: CONTRIBUTING.md  changelog.md  citation.md
docs/api/: index.md  indices.md  parallel_processing.md  swarm_data_manager.md
docs/examples/: advanced.md  basic.md
docs/notebooks/: index.md
examples/: parallel_processing_example.py
experiments/: GetDataFromMoveBankAPI.ipynb  MagGeo - Sequential Mode-AMD-21.ipynb  README.md
guidelines/: PUBLICATION_GUIDE.md  PUBLICATION_STATUS.md  PUBLISHING.md  improvements_summary.md  publish.py  test_docs.sh
maggeo/: README.md  __init__.py  auxiliaryfunctions.py  chaos.py  cli.py  core.py  date_utils.py  debug.py  debug_config.py  exceptions.py  gps.py  indices.py  interpolation.py  parallel_processing.py  row_handler.py  swarm.py  swarm_data_manager.py
notebooks/: SWARM_DATA_MANAGER_USAGE.md
parameters/: default.yml
results/: GeoMagResult_BirdGPSTrajectory.csv  GeoMagResult_BirdGPSTrajectoryTest.csv  GeoMagResult_MoveBank.csv  GeoMagV2_BirdGPSTrajectory.csv  GeoMagV2_PEG_07_08_Mar_15.csv  GeoMag_BirdGPSTrajectory.csv
search/: search_index.json
stand_alone_script/: MagGeoSequential_SA.py
temp_data/: GPS_ResInt.csv
tests/: test_chaos.py  test_core.py  test_date_utils.py  test_gps.py  test_interpolation.py  test_platform.py  test_swarm.py
utilities/: MagGeoFunctions.py  auxiliaryfunctions.py  gg_to_geo.py  row_handler.py
(+84 files in other folders)
